[b]Version 0.6.7[/b]:

(2009-01-17)
 * Now the mplayer process is not restarted when loading an external subtitle
   file (using the sub_load slave command), except for idx/sub subtitles. 

(2009-01-15)
 * (Windows) Now the screensaver is allowed to turn on if the file is
    paused or it's an audio file.
 * The "it's a playlist" option in the Open URL dialog is automatically
   checked if the url ends with ".ram", ".asx" or ".m3u" (and unchecked if
   it ends with another extension).

(2009-01-14)
 * New option for the config file: user_forced_ass_style under the 
   [subtitles] section. If the value is not an empty string, it will be
   passed to mplayer for the -ass-force-style option, overriding the string
   generated automatically by smplayer.
 * Added a "Customize" button in the SSA/ASS section in preferences to
   allow the user to customize the SSA/ASS style which will be passed to
   mplayer with the -ass-force-style option.

(2009-01-12)
 * (Fix) When opening an iso file, start to play from the dvd menu instead
   of title 1.
 * Added a new option to select the shadow color for ass subtitles.

(2009-01-11)
 * Now it's possible to play a dvd with menus from command line 
   (smplayer dvdnav://) or by selecting "dvdnav://" from the recents menu.
   It'll even work if the option "Enable DVD menus" is not checked.
 * Now the highlighted option in the DVD menu changes when the mouse is
   moved.

(2009-01-10)
 * Fixed the initialization of the Angles menu when using dvdnav.
 * Added to the Browse menu the options 'DVD menu' and 'DVD previous menu'.

(2009-01-09)
 * Now the length of the title is updated when playing a dvd using dvdnav.

(2009-01-08)
 * (Linux) Added the option "Enable DVD menus" in Preferences->Drives. If 
   this option is checked, when you select "DVD from drive" or "DVD from 
   folder" under the Open menu, the DVD will be played using dvdnav (including 
   menus).
   Note: this is experimental, there are still a lot of things to be fixed.